# cmake

./: commands.md  listfiles-and-modules.md  notes.md  questions.txt  useful-commands.txt
examples/1-basics/2-cmake-most-basic/: CMakeLists.txt  print_result.cpp
examples/1-basics/3-cmake-version-project-name/: CMakeLists.txt
examples/1-basics/4-cmake-using-libraries/: CMakeLists.txt  main.cpp
examples/2-sub-directories/1-sub-directories/my_math_dir/: CMakeLists.txt  addition.cpp
examples/2-sub-directories/1-sub-directories/my_print_dir/: CMakeLists.txt
examples/2-sub-directories/2-inc-src-folders/: CMakeLists.txt  main.cpp
examples/2-sub-directories/2-inc-src-folders/my_math_dir/: CMakeLists.txt
examples/2-sub-directories/2-inc-src-folders/my_math_dir/src/: addition.cpp  division.cpp
examples/2-sub-directories/2-inc-src-folders/my_print_dir/src/: print_result.cpp
examples/2-sub-directories/3-lib-name-in-header/: CMakeLists.txt
examples/2-sub-directories/3-lib-name-in-header/my_print/inc/my_print/: print_result.h
examples/3-variables-lists-strings/: alicebob.cmake  message.cmake
examples/4-cached-variables/: CMakeLists.txt  main.cpp
examples/4-cached-variables/my_print/src/: print_result.cpp
examples/5-package/my_math/: CMakeLists.txt
examples/5-package/my_print/: CMakeLists.txt
examples/6-using-3rd-party-package/: CMakeLists.txt  main.cpp
examples/7-app-opencv/: CMakeLists.txt  main.cpp
examples/8-gtk-app/: CMakeLists.txt  main.cpp
examples/9-find-cmake/: FindGTK3.cmake
